--- a/playbooks/deploy/deploy.yml
+++ b/playbooks/deploy/deploy.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Deploy the app
-  hosts: "{{ env_type }}_tp_1"
+  hosts: "{{ env_type }}_back_1"
   tasks:
     - name: Copy target to env
       copy:
