--- a/playbooks/industr/roles/jenkins_deploy/templates/Dockerfile
+++ b/playbooks/industr/roles/jenkins_deploy/templates/Dockerfile
@@ -9,9 +9,18 @@ ENV VENV_HOME="{{ jenkins_venv_dir }}"
 COPY {{ file }} {{ jenkins_ref_dir }}/{{ file }}
 {% endfor %}
 
+RUN mkdir -p {{ jenkins_ssh_dir }}
+COPY {{ ssh_key_name }} {{ jenkins_ssh_dir }}/{{ ssh_key_name }}
+COPY {{ ssh_key_name }}.pub {{ jenkins_ssh_dir }}/{{ ssh_key_name }}.pub
+RUN chmod 700 {{ jenkins_ssh_dir }}
+RUN chmod 600 {{ jenkins_ssh_dir }}/{{ ssh_key_name }}
+RUN chmod 640 {{ jenkins_ssh_dir }}/{{ ssh_key_name }}.pub
+
 # Preparing environment
 RUN apt-get update
 RUN apt-get install -y python-pip sudo libaio1 unzip sshpass rsync maven
 RUN pip install virtualenv
+RUN virtualenv {{ jenkins_venv_dir }}
+RUN {{ jenkins_venv_dir }}/bin/pip --no-cache-dir install -r {{ jenkins_ref_dir }}/requirements.txt 
 RUN sh {{ jenkins_ref_dir }}/selenium_prepare.sh
 RUN env && /usr/local/bin/install-plugins.sh < {{ jenkins_ref_dir }}/plugins.txt
