--- a/playbooks/industr/roles/xebenv_deploy/templates/Dockerfile
+++ b/playbooks/industr/roles/xebenv_deploy/templates/Dockerfile
@@ -13,6 +13,14 @@ RUN echo "{{ jenkins_to_back_user }} ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 # SSH login fix. Otherwise user is kicked off after login
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
+
+RUN mkdir -p {{ jenkins_to_back_ssh_dir }}
+COPY {{ ssh_key_name }}.pub {{ jenkins_to_back_ssh_dir }}/authorized_keys
+RUN chmod 700 {{ jenkins_to_back_ssh_dir }}
+RUN chown {{ jenkins_to_back_user }} {{ jenkins_to_back_ssh_dir }}
+RUN chmod 600 {{ jenkins_to_back_ssh_dir }}/authorized_keys
+RUN chown {{ jenkins_to_back_user }} {{ jenkins_to_back_ssh_dir }}/authorized_keys
+
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 
