--- a/playbooks/industr/roles/jenkins_deploy/templates/docker-compose.yml
+++ b/playbooks/industr/roles/jenkins_deploy/templates/docker-compose.yml
@@ -4,15 +4,19 @@ services:
   jenkins:
     build: .
     ports:
-     - "{{ jenkins_port }}:8080"
-     - "{{ jenkins_master_port }}:50000"
+      - "{{ jenkins_port }}:8080"
+      - "{{ jenkins_master_port }}:50000"
     networks:
       - "{{ app }}_network"
     volumes:
-     - jenkins_{{ app }}_data:/var/jenkins_home
+      - jenkins_{{ app }}_data:/var/jenkins_home
     restart: always
+    extra_hosts:
+{% for env in groups.environments %}
+      - "{{ env }}:{{ hostvars[env].env_ip }}"
+{% endfor %}
     environment:
-     - CASC_JENKINS_CONFIG={{ jenkins_ref_dir }}/jenkins.yml
+      - CASC_JENKINS_CONFIG={{ jenkins_ref_dir }}/jenkins.yml
 volumes:
   jenkins_{{ app }}_data:
     driver_opts:
