--- a/playbooks/industr/roles/xebenv_deploy/templates/docker-compose.yml
+++ b/playbooks/industr/roles/xebenv_deploy/templates/docker-compose.yml
@@ -11,7 +11,8 @@ services:
   back:
     build: .
     ports:
-      - {{ app_port }}:8080
+      - "{{ app_port }}:8080"
+      - "{{ ssh_port }}:22"
     networks:
       - {{ network_name }}
     restart: always
