--- a/playbooks/industr/roles/python_install/tasks/main.yml
+++ b/playbooks/industr/roles/python_install/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
 
+#- name: Install Python
+#  raw: apt-get update && apt-get -y install python python-pip
+#  become: yes
+
 - name: Install Python
-  raw: apt-get update && apt-get -y install python python-pip
+  apt:
+    name:
+      - python
+      - python-pip
   become: yes
