--- a/playbooks/deploy/deploy.yml
+++ b/playbooks/deploy/deploy.yml
@@ -5,6 +5,6 @@
   tasks:
     - name: Copy target to env
       copy:
-        src: "../../target/"
-        dest: "/usr/local/tomcat/webapps/"
+        src:  ../../target/
+        dest: /usr/local/tomcat/webapps/
       become: yes
