--- a/playbooks/industr/roles/xebenv_deploy/tasks/main.yml
+++ b/playbooks/industr/roles/xebenv_deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure needed params were set
+  import_role:
+    name: check_params
+  vars:
+    params: "{{ needed_params }}"
+
 - name: Generate the xebenv's confs
   import_tasks: generate_confs.yml
 
@@ -13,7 +19,7 @@
   docker_compose:
     project_src: "{{ path_to_installer }}"
     state: absent
-   
+
 - name: Create and start services
   docker_compose:
     project_src: "{{ path_to_installer }}"
